tests/bench/mvcgen/loom/Loom/Test/Strategies/TryRfl.lean
import Loom.Tactic.VCGen

/-!
Tests that `lmvcgen` falls back to reflexivity for already-identical entailments.
-/

open Loom Lean Meta Order Std.Internal.Do

set_option new_wp_monad true
set_option mvcgen.warning false

namespace Loom.Test.Strategies.TryRfl

macro "test" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]) -trivial)

/--
error: unsolved goals
case vc1
P : Prop
a‚úĚ : P
‚äĘ P
-/
#guard_msgs in
example (P : Prop) : P ‚äĎ P := by
  test

/--
error: unsolved goals
case vc1
P : Nat ‚Üí Bool ‚Üí Prop
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ P s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example (P : Nat ‚Üí Bool ‚Üí Prop) : P ‚äĎ P := by
  test

example {l : Type} [CompleteLattice l] (P : Nat ‚Üí Bool ‚Üí l) : P ‚äĎ P := by
  lmvcgen -trivial

end Loom.Test.Strategies.TryRfl
